[gd_scene load_steps=8 format=3 uid="uid://dvghod301bs4s"]

[ext_resource type="Script" uid="uid://dbk240ju40uc4" path="res://scripts/ui/hud/hero_hud.gd" id="1_j61h5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j61h5"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 1.0
bg_color = Color(0.11764706, 0.11764706, 0.11764706, 0.3529412)
corner_radius_top_left = 10
corner_radius_top_right = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5whc6"]

[sub_resource type="Gradient" id="Gradient_5whc6"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.1584723, 0.15847233, 0.15847224, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_j61h5"]
gradient = SubResource("Gradient_5whc6")
width = 1

[sub_resource type="Gradient" id="Gradient_trx4l"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.42822, 0.78, 0.26519996, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_5whc6"]
gradient = SubResource("Gradient_trx4l")
width = 1

[node name="HeroHud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j61h5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -205.0
offset_top = -35.0
offset_right = 205.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 5

[node name="ModifiersBar" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 5

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_j61h5")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="AbilitiesBar" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ResourceBars" type="VBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/ResourceBars"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_5whc6")

[node name="HealthBar" type="TextureProgressBar" parent="VBoxContainer/PanelContainer/VBoxContainer/ResourceBars/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 25)
layout_mode = 2
value = 80.0
nine_patch_stretch = true
texture_under = SubResource("GradientTexture1D_j61h5")
texture_progress = SubResource("GradientTexture1D_5whc6")

[node name="HealthNumber" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/ResourceBars/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.7647059)
theme_override_font_sizes/font_size = 14
text = "80/100"
horizontal_alignment = 1
vertical_alignment = 1
